Fixed layout problem in Opera 11, by undoing revision 1305. This means that issue 293 is back.

--- a/ontopia/src/webapps/toplevel/frontpage.css
+++ b/ontopia/src/webapps/toplevel/frontpage.css
@@ -35,7 +35,7 @@ li {
 
 /* ---- Table Formatting  ---- */
 #header {
-  background: url("ontopia-header.gif") repeat-x left top;
+  background: url("ontopia-header.gif") no-repeat left top;
   background-color: #FF0000;
   padding-top: 16px;
 }
